# npm-cockpit

./: .gitignore  Layout.py  Processing.py  README.md  Router.py  app.py  data.json  dependencies.json  index.js  index.py  layout.json  package.json  pyproject.toml  statistic.json
app/: Router.py  Server.py  app.py  dependencies.py  frequency.py  issues.py  layout.json  layout.py  path.py  processing.py  statistic.json  utils.py  vulnerabilities.py
app/classes/: Error.py  Lib.py
app/data/: dependencies.py  deprecated.py  layout.py  package.py  updates.py  vulnerabilities.py
client/: index.html  layout.json
client/css/: colors.css  styles.classes.css  styles.components.css  styles.css  styles.main.css
client/js/: api.js  components.js  index.js  utils.js
client/js/components/: about.js  dashboard-item.js  dashboard.js  dependencies.js  index.js  page.js  popups.js  security.js  statistic.js  widget.js
client/js/plots/: bar.js  dependencies-network.js  dependencies-tree.js  dependencies.js  frequency.js  statistic.js  updates.js  utils.js  vulnerabilities.js  weight.js
client/js/workers/: dependenciesList.js  dependenciesNetwork.js  dependenciesTree.js  frequency.js  issuesTable.js  updates.js  updatesTable.js  vulnerabilitiesTable.js  weight.js
src/: __main__.py
src/app/: Router.py  Server.py  app.py  path.py  utils.py
src/app/classes/: Lib.py  Response.py
src/app/data/: dependencies.py  deprecated.py  package.py  updates.py  vulnerabilities.py
src/client/css/: colors.css  styles.classes.css  styles.components.css  styles.ids.css  styles.main.css
(+55 files in other folders)
