[tool.poetry]
name = "npm-cockpit"
version = "0.1.0"
description = "installable command-line tool which helps to track nodejs project dependencies state"
authors = ["Alex Chirkin <hello@alexchirkin.me>"]
readme = "README.md"
packages = [{include = "npm_cockpit"}]

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
